--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,17 +61,18 @@ html {
 }
 
 .header__navbar-item {
-  cursor: pointer;
   color: var(--white-color);
-  display: inline-block;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 8px;
+  min-height: 20px;
   position: relative;
   font-size: 1.5rem;
   font-weight: 300;
-}
-
-.header__navbar-item:hover {
-  color: rgba(255, 255, 255, 0.7);
 }
 
 .header__navbar-item--separate:after {
@@ -87,6 +88,13 @@ html {
 }
 
 .header__navbar-item-link {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: var(--white-color);
   text-decoration: none;
 }
@@ -102,4 +110,13 @@ html {
 .header__navbar-icon-link {
   color: var(--white-color);
   text-decoration: none;
+}
+
+.header__navbar-icon-link:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.header__navbar-icon {
+  font-size: 1.8rem;
+  margin: 0 4px;
 }
