--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,17 +17,14 @@
 	}
 
 	@include element("navbar-item") {
-		cursor: pointer;
 		color: var(--white-color);
-		display: inline-block;
+		display: inline-flex;
+		align-items: center;
 		margin: 0 8px;
+		min-height: 20px;
 		position: relative;
 		font-size: 1.5rem;
 		font-weight: 300;
-
-		&:hover {
-			color: rgba(255, 255, 255, .7);
-		}
 
 		@include modifier("separate") {
 			&:after {
@@ -44,6 +41,9 @@
 	}
 
 	@include element("navbar-item-link") {
+		cursor: pointer;
+		display: flex;
+    	align-items: center;
 		color: var(--white-color);
 		text-decoration: none;
 
@@ -59,5 +59,14 @@
 	@include element("navbar-icon-link") {
 		color: var(--white-color);
 		text-decoration: none;
+
+		&:hover {
+			color: rgba(255, 255, 255, .7);
+		}
+	}
+
+	@include element("navbar-icon") {
+		font-size: 1.8rem;
+		margin: 0 4px;
 	}
 }
