--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,24 @@ html {
       flex-wrap: wrap;
 }
 
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .header {
   height: 120px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(#fe6433), to(#f53e2d));
@@ -87,6 +105,18 @@ html {
           transform: translateY(-50%);
 }
 
+.header__navbar-item--has-qr {
+  cursor: pointer;
+}
+
+.header__navbar-item--has-qr:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.header__navbar-item--has-qr:hover .header__qr {
+  display: block;
+}
+
 .header__navbar-item-link {
   cursor: pointer;
   display: -webkit-box;
@@ -119,4 +149,52 @@ html {
 .header__navbar-icon {
   font-size: 1.8rem;
   margin: 0 4px;
+}
+
+.header__qr {
+  display: none;
+  width: 190px;
+  background-color: var(--white-color);
+  position: absolute;
+  top: 150%;
+  left: 0;
+  padding: 8px;
+  border-radius: 4px;
+  -webkit-animation: fadeIn ease-in .5s;
+          animation: fadeIn ease-in .5s;
+}
+
+.header__qr::before {
+  content: '';
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  top: -10%;
+  left: 0;
+}
+
+.header__qr-img {
+  width: 100%;
+}
+
+.header__qr-apps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 5px;
+}
+
+.header__qr-link:first-child {
+  margin-left: 11px;
+}
+
+.header__qr-link:last-child {
+  margin-right: 11px;
+}
+
+.header__qr-download-app-img {
+  height: 16px;
 }
