--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -47,3 +47,14 @@ html {
 		flex-wrap: wrap;
 	}
 }
+
+// Animation
+@keyframes fadeIn {
+	from {
+		opacity: 0;	
+	}
+
+	to {
+		opacity: 1;
+	}
+}
