--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
  * Copyright (c) 2021 All rights reserved
  */
 :root {
+  --primary-color: #ee4d2d;
   --white-color: #fff;
   --black-color: #000;
   --text-color: #333;
@@ -160,12 +161,12 @@ html {
   left: 0;
   padding: 8px;
   border-radius: 4px;
-  -webkit-animation: fadeIn ease-in .5s;
-          animation: fadeIn ease-in .5s;
+  -webkit-animation: fadeIn ease-in 0.5s;
+          animation: fadeIn ease-in 0.5s;
 }
 
 .header__qr::before {
-  content: '';
+  content: "";
   width: 100%;
   height: 30px;
   position: absolute;
@@ -197,4 +198,77 @@ html {
 
 .header__qr-download-app-img {
   height: 16px;
+}
+
+.header__notification {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: var(--white-color);
+  width: 404px;
+  border: 1px solid #d3d3d3;
+}
+
+.header__notification-header {
+  color: #999;
+  font-weight: 400;
+  font-size: 1.6rem;
+  margin: 0 12px 0;
+  height: 40px;
+  line-height: 40px;
+}
+
+.header__notification-list {
+  padding-left: 0;
+}
+
+.header__notification-item:hover {
+  background-color: #f7f7f7;
+}
+
+.header__notification-item--viewed {
+  background-color: rgba(238, 77, 45, 0.1);
+}
+
+.header__notification-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  padding: 12px;
+}
+
+.header__notification-img {
+  width: 48px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.header__notification-info {
+  margin-left: 12px;
+}
+
+.header__notification-name {
+  display: block;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--black-color);
+}
+
+.header__notification-description {
+  display: block;
+  font-size: 1.4rem;
+  color: #888;
+  line-height: 3rem;
+}
+
+.header__notification-footer {
+  text-align: center;
+}
+
+.header__notification-footer-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: var(--text-color);
+  padding: 4px 16px;
 }
