--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -4,6 +4,7 @@
  */
 
 :root {
+	--primary-color: #ee4d2d;
 	--white-color: #fff;
 	--black-color: #000;
 	--text-color: #333;
@@ -51,7 +52,7 @@ html {
 // Animation
 @keyframes fadeIn {
 	from {
-		opacity: 0;	
+		opacity: 0;
 	}
 
 	to {
