--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,7 +88,7 @@ html {
       -ms-flex-align: center;
           align-items: center;
   margin: 0 8px;
-  min-height: 20px;
+  min-height: 30px;
   position: relative;
   font-size: 1.5rem;
   font-weight: 300;
@@ -115,6 +115,10 @@ html {
 }
 
 .header__navbar-item--has-qr:hover .header__qr {
+  display: block;
+}
+
+.header__navbar-item--has-notification:hover .header__notification {
   display: block;
 }
 
@@ -201,12 +205,66 @@ html {
 }
 
 .header__notification {
+  display: none;
   position: absolute;
   top: 100%;
   right: 0;
+  margin-top: 20px;
   background-color: var(--white-color);
   width: 404px;
   border: 1px solid #d3d3d3;
+  -webkit-transform-origin: calc(100% - 20px) top;
+          transform-origin: calc(100% - 20px) top;
+  -webkit-animation: headerNotificationShow ease-in 0.2s;
+          animation: headerNotificationShow ease-in 0.2s;
+  will-change: opacity, transform;
+}
+
+.header__notification::before {
+  content: "";
+  border-bottom: 20px;
+  border-left: 20px;
+  border-right: 20px;
+  border-style: solid;
+  position: absolute;
+  top: -20px;
+  right: 5%;
+  border-color: transparent transparent var(--white-color);
+}
+
+.header__notification::after {
+  content: "";
+  position: absolute;
+  top: -22px;
+  right: 0;
+  width: 90px;
+  height: 25px;
+}
+
+@-webkit-keyframes headerNotificationShow {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes headerNotificationShow {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 
 .header__notification-header {
@@ -252,14 +310,16 @@ html {
   display: block;
   font-size: 1.5rem;
   font-weight: 500;
-  color: var(--black-color);
+  color: var(--text-color);
+  line-height: 2rem;
 }
 
 .header__notification-description {
   display: block;
   font-size: 1.4rem;
   color: #888;
-  line-height: 3rem;
+  line-height: 2rem;
+  margin-top: 6px;
 }
 
 .header__notification-footer {
@@ -270,5 +330,6 @@ html {
   display: inline-block;
   text-decoration: none;
   color: var(--text-color);
-  padding: 4px 16px;
+  padding: 12px 16px;
+  font-weight: 400;
 }
