--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,6 +58,33 @@ html {
   }
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal__body {
+  width: 300px;
+  height: 300px;
+  background-color: var(--white-color);
+  border-radius: 4px;
+  margin: auto;
+  z-index: 1;
+}
+
 .header {
   height: 120px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(#fe6433), to(#f53e2d));
