--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
   --white-color: #fff;
   --black-color: #000;
   --text-color: #333;
+  --border-color: #dbdbdb;
 }
 
 * {
@@ -81,6 +82,23 @@ html {
   border-radius: 4px;
   margin: auto;
   z-index: 1;
+}
+
+.btn {
+  cursor: pointer;
+  min-width: 142px;
+  height: 36px;
+  line-height: 36px;
+  text-decoration: none;
+  border: none;
+  border-radius: 2px;
+  font-size: 1.5rem;
+  padding: 0;
+}
+
+.btn.btn--primary {
+  background-color: var(--primary-color);
+  color: var(--white-color);
 }
 
 .header {
@@ -357,4 +375,73 @@ html {
   color: var(--text-color);
   padding: 12px 16px;
   font-weight: 400;
+}
+
+.auth-form {
+  width: 500px;
+}
+
+.auth-form__container {
+  padding: 32px;
+}
+
+.auth-form__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.auth-form__heading {
+  font-size: 2.2rem;
+  font-weight: 400;
+  color: var(--text-color);
+  line-height: 3.2rem;
+  margin: 0;
+}
+
+.auth-form__switch-btn {
+  cursor: pointer;
+  font-size: 1.6rem;
+  color: var(--primary-color);
+}
+
+.auth-form__input {
+  border: 1px solid var(--border-color);
+  border-radius: 3px;
+  width: 100%;
+  height: 40px;
+  margin-top: 16px;
+  padding: 0 12px;
+  font-size: 1.4rem;
+  outline: none;
+}
+
+.auth-form__input:focus {
+  border-color: #777;
+}
+
+.auth-form__aside {
+  margin: 18px 0;
+}
+
+.auth-form__policy-text {
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  text-align: center;
+  margin: 0;
+}
+
+.auth-form__text-link {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.auth-form__controls {
+  margin-top: 60px;
 }
