--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -8,6 +8,7 @@
 	--white-color: #fff;
 	--black-color: #000;
 	--text-color: #333;
+	--border-color: #dbdbdb;
 }
 
 * {
@@ -81,5 +82,23 @@ html {
 		border-radius: 4px;
 		margin: auto;
 		z-index: 1;
+	}
+}
+
+// Button
+.btn {
+	cursor: pointer;
+	min-width: 142px;
+	height: 36px;
+	line-height: 36px;
+	text-decoration: none;
+	border: none;
+	border-radius: 2px;
+	font-size: 1.5rem;
+	padding: 0;
+
+	&.btn--primary {
+		background-color: var(--primary-color);
+		color: var(--white-color);
 	}
 }
