--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -250,5 +250,70 @@
 		padding: 12px 16px;
 		font-weight: 400;
 	}
-	// Begin: Header Notification
+	// End: Header Notification
 }
+
+// Begin: Auth Form Modal
+.auth-form {
+	width: 500px;
+
+	@include element("container") {
+		padding: 32px;
+	}
+
+	@include element("header") {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	@include element("heading") {
+		font-size: 2.2rem;
+		font-weight: 400;
+		color: var(--text-color);
+		line-height: 3.2rem;
+		margin: 0;
+	}
+
+	@include element("switch-btn") {
+		cursor: pointer;
+		font-size: 1.6rem;
+		color: var(--primary-color);
+	}
+
+	@include element("input") {
+		border: 1px solid var(--border-color);
+		border-radius: 3px;
+		width: 100%;
+		height: 40px;
+		margin-top: 16px;
+		padding: 0 12px;
+		font-size: 1.4rem;
+		outline: none;
+
+		&:focus {
+			border-color: #777;
+		}
+	}
+
+	@include element("aside") {
+		margin: 18px 0;
+	}
+
+	@include element("policy-text") {
+		font-size: 1.2rem;
+		line-height: 1.6rem;
+		text-align: center;
+		margin: 0;
+	}
+
+	@include element("text-link") {
+		color: var(--primary-color);
+		text-decoration: none;
+	}
+
+	@include element("controls") {
+		margin-top: 60px;
+	}
+}
+// End: Auth Form Modal
