--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -255,6 +255,9 @@
 
 // Begin: Auth Form Modal
 .auth-form {
+	background-color: var(--white-color);
+	border-radius: 4px;
+	overflow: hidden;
 	width: 500px;
 
 	@include element("container") {
@@ -313,7 +316,30 @@
 	}
 
 	@include element("controls") {
+		display: flex;
+		justify-content: flex-end;
 		margin-top: 60px;
+	}
+
+	@include element("socials") {
+		background-color: #f5f5f5;
+		padding: 16px 32px;
+		display: flex;
+		justify-content: space-between;
+
+		@include modifier("facebook") {
+			color: var(--white-color);
+			background-color: #3a5a9b;
+		}
+
+		@include modifier("google") {
+			color: var(--white-color);
+			background-color: #ea4335;
+		}
+	}
+
+	@include element("socials-icon") {
+		font-size: 1.6rem;
 	}
 }
 // End: Auth Form Modal
