--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -452,12 +452,148 @@ html {
 }
 
 .header__search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 2px;
   height: 40px;
   background-color: var(--white-color);
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.header__search-select {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-left: 2px solid #ccc;
+  padding-left: 12px;
+  position: relative;
+}
+
+.header__search-select:hover .header__search-option {
+  display: block;
+}
+
+.header__search-input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 100%;
+  font-size: 1.4rem;
+  color: var(--text-color);
+  border: none;
+  border-radius: 2px;
+  outline: none;
+  padding: 0 12px;
+}
+
+.header__search-option {
+  -webkit-animation: fadeIn ease-in .2s;
+          animation: fadeIn ease-in .2s;
+  list-style-type: none;
+  position: absolute;
+  right: 0;
+  top: 150%;
+  min-width: 150px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 3px #777;
+          box-shadow: 0 0 3px #777;
+  padding: 0;
+  display: none;
+}
+
+.header__search-option::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 18px;
+  position: absolute;
+  top: -18px;
+  left: 0;
+}
+
+.header__search-option-item {
+  background-color: var(--white-color);
+  padding: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__search-option-item:hover {
+  background-color: #fafafa;
+  cursor: pointer;
+}
+
+.header__search-option-item span {
+  color: var(--text-color);
+  font-size: 1.4rem;
+}
+
+.header__search-option-item i {
+  color: var(--primary-color);
+  font-size: 1.4rem;
+  display: none;
+}
+
+.header__search-option-item--active i {
+  display: inline-block;
+}
+
+.header__search-option-item:first-child {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+.header__search-option-item:last-child {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.header__search-select-label {
+  color: var(--text-color);
+  font-size: 1.4rem;
+}
+
+.header__search-select-label-icon {
+  color: #4a4a4a;
+  font-size: 1.4rem;
+  margin: 0 16px;
+}
+
+.header__search-btn {
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  width: 60px;
+  height: 30px;
+  margin-right: 12px;
+  outline: none;
+}
+
+.header__search-btn:hover {
+  background-color: #fb6445;
+}
+
+.header__search-btn-icon {
+  font-size: 1.2rem;
+  color: var(--white-color);
 }
 
 .header__cart {
@@ -610,4 +746,5 @@ html {
       -ms-flex-align: center;
           align-items: center;
   height: var(--header-with-search-height);
+  margin: 0 8px;
 }
