--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -261,10 +261,134 @@
 	}
 
 	@include element("search") {
+		display: flex;
+		align-items: center;
 		border-radius: 2px;
 		height: 40px;
 		background-color: var(--white-color);
 		flex: 1;
+	}
+
+	@include element("search-select") {
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		border-left: 2px solid #ccc;
+		padding-left: 12px;
+		position: relative;
+
+		&:hover {
+			.header__search-option {
+				display: block;
+			}
+		}
+	}
+
+	@include element("search-input") {
+		flex: 1;
+		height: 100%;
+		font-size: 1.4rem;
+		color: var(--text-color);
+		border: none;
+		border-radius: 2px;
+		outline: none;
+		padding: 0 12px;
+	}
+
+	@include element("search-option") {
+		animation: fadeIn ease-in .2s;
+		list-style-type: none;
+		position: absolute;
+		right: 0;
+		top: 150%;
+		min-width: 150px;
+		border-radius: 2px;
+		box-shadow: 0 0 3px #777;
+		padding: 0;
+		display: none;
+
+		&::after {
+			content: "";
+			display: block;
+			width: 100%;
+			height: 18px;
+			position: absolute;
+			top: -18px;
+			left: 0;	
+		}
+	}
+
+	@include element("search-option-item") {
+		background-color: var(--white-color);
+		padding: 12px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		&:hover {
+			background-color: #fafafa;
+			cursor: pointer;
+		}
+
+		span {
+			color: var(--text-color);
+			font-size: 1.4rem;
+		}
+
+		i {
+			color: var(--primary-color);
+			font-size: 1.4rem;
+			display: none;
+		}
+
+		@include modifier("active") {
+			i {
+				display: inline-block;
+			}
+		}
+
+		&:first-child {
+			border-top-left-radius: 2px;
+			border-top-right-radius: 2px;
+		}
+
+		&:last-child {
+			border-bottom-left-radius: 2px;
+			border-bottom-right-radius: 2px;
+		}
+	}
+
+
+
+	@include element("search-select-label") {
+		color: var(--text-color);
+		font-size: 1.4rem;
+	}
+
+	@include element("search-select-label-icon") {
+		color: #4a4a4a;
+		font-size: 1.4rem;
+		margin: 0 16px;
+	}
+
+	@include element("search-btn") {
+		background-color: var(--primary-color);
+		border: none;
+		border-radius: 2px;
+		cursor: pointer;
+		width: 60px;
+		height: 30px;
+		margin-right: 12px;
+		outline: none;
+
+		&:hover {
+			background-color: #fb6445;
+		}
+	}
+
+	@include element("search-btn-icon") {
+		font-size: 1.2rem;
+		color: var(--white-color);
 	}
 
 	@include element("cart") {
@@ -399,6 +523,7 @@
 	display: flex;
 	align-items: center;
 	height: var(--header-with-search-height);
+	margin: 0 8px;
 }
 
 // End: Header with search
