--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -483,10 +483,63 @@ html {
   display: block;
 }
 
-.header__search-input {
+.header__search-input-wrap {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  height: 100%;
+  position: relative;
+}
+
+.header__search-history {
+  display: none;
+  position: absolute;
+  top: calc(100% + 6px);
+  left: 0;
+  width: 95%;
+  background-color: var(--white-color);
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 3px #777;
+          box-shadow: 0 0 3px #777;
+}
+
+.header__search-history-heading {
+  margin: 8px 12px;
+  font-size: 1.4rem;
+  color: #999;
+  font-weight: 400;
+}
+
+.header__search-history-list {
+  list-style: none;
+  padding-left: 0;
+  margin: 8px 0 0;
+}
+
+.header__search-history-list-item {
+  font-size: 1.4rem;
+  padding: 0 12px;
+  height: 38px;
+  line-height: 38px;
+}
+
+.header__search-history-list-item:hover {
+  background-color: #fafafa;
+}
+
+.header__search-history-list-item:last-child {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.header__search-history-list-item a {
+  display: block;
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.header__search-input {
+  width: 100%;
   height: 100%;
   font-size: 1.4rem;
   color: var(--text-color);
@@ -494,6 +547,10 @@ html {
   border-radius: 2px;
   outline: none;
   padding: 0 12px;
+}
+
+.header__search-input:focus ~ .header__search-history {
+  display: block;
 }
 
 .header__search-option {
