+ css user info

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,6 +183,9 @@ html {
 }
 
 .header__navbar-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin: 6px 0;
   list-style: none;
   padding-left: 0;
@@ -229,6 +232,99 @@ html {
 
 .header__navbar-item--has-notification:hover .header__notification {
   display: block;
+}
+
+.header__navbar-user {
+  cursor: pointer;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.header__navbar-user:hover .header__navbar-user-menu {
+  display: block;
+}
+
+.header__navbar-user-img {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.header__navbar-user-name {
+  margin-left: 8px;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.header__navbar-user-menu {
+  display: none;
+  background-color: var(--white-color);
+  border-radius: 2px;
+  position: absolute;
+  padding-left: 0;
+  top: 130%;
+  right: 0;
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  width: 160px;
+  z-index: 1;
+}
+
+.header__navbar-user-menu::before {
+  content: "";
+  border-bottom: 15px;
+  border-left: 15px;
+  border-right: 15px;
+  border-style: solid;
+  position: absolute;
+  top: -16px;
+  right: 5%;
+  border-color: transparent transparent var(--white-color);
+}
+
+.header__navbar-user-menu::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -16px;
+  right: 0px;
+  width: 88%;
+  height: 16px;
+}
+
+.header__navbar-user-menu-item {
+  list-style: none;
+}
+
+.header__navbar-user-menu-item:first-child a {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+.header__navbar-user-menu-item:last-child a {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.header__navbar-user-menu-item a {
+  color: var(--text-color);
+  font-size: 1.4rem;
+  padding: 8px 16px;
+  display: block;
+  text-decoration: none;
+}
+
+.header__navbar-user-menu-item a:hover {
+  background-color: #fafafa;
 }
 
 .header__navbar-item-link {
@@ -327,6 +423,7 @@ html {
   -webkit-animation: headerNotificationShow ease-in 0.2s;
           animation: headerNotificationShow ease-in 0.2s;
   will-change: opacity, transform;
+  z-index: 1;
 }
 
 .header__notification::before {
